# nirvana

./: .gitattributes  .gitignore  .sql-formatter.json  AGENTS.md  CLAUDE.md  Cargo.toml  agent.md  justfile  mise.toml
.zed/: settings.json
crates/nirvana/: Cargo.toml  build.rs
crates/nirvana-core/: Cargo.toml
crates/nirvana-core/src/: config.rs  lib.rs  paths.rs
crates/nirvana-core/src/api/: connection.rs  delete.rs  domain.rs  edit.rs  errors.rs  mod.rs  publish.rs  settings.rs  slots.rs  tracking.rs
crates/nirvana-core/src/db/: connection_repo.rs  mod.rs
crates/nirvana-core/src/db/migrations/: 0001_init.sql
crates/nirvana-core/src/domain/: connection.rs
crates/nirvana-core/src/integration/: jira.rs  mod.rs
crates/nirvana-core/src/storage/: connection_repo.rs  slot_repo.rs
crates/nirvana-gui/: package.json  vite.config.ts
crates/nirvana-gui/src/: App.vue  tasksData.ts  tickets.ts
crates/nirvana-gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/nirvana-gui/src-tauri/icons/: icon.icns
crates/nirvana-gui/src-tauri/src/: lib.rs  main.rs
crates/nirvana-gui/src-tauri/src/idle/: macos.rs  mod.rs  windows.rs
crates/nirvana-gui/src/assets/: main.css
crates/nirvana-gui/src/components/: Button.vue  EmptyState.vue  TaskModals.vue  TicketKeyCombobox.vue
crates/nirvana-gui/src/components/modals/: AddConnectionModal.vue  CreateTaskModal.vue  EditTaskModal.vue  IdleModal.vue  ModalShell.vue  PublishTaskModal.vue  StartTaskModal.vue
crates/nirvana-gui/src/composables/: dateTimeInputs.ts  useCreateTaskModal.ts  useEditTaskModal.ts  useSessionRangeEditor.ts  useStartTaskModal.ts  useTicketKeySearch.ts
crates/nirvana-gui/src/layout/: Footer.vue
crates/nirvana-gui/src/page/: ConnectionSetup.vue  Main.vue  Settings.vue
crates/nirvana-gui/src/stores/: activeTask.ts  allTasks.ts  connections.ts  idle.ts  settings.ts
crates/nirvana-gui/src/tasks/: operations.ts  selectors.ts  time.ts
crates/nirvana-gui/src/types/: types.ts
crates/nirvana/src/: main.rs
crates/nirvana/src/cli/: connection.rs  edit.rs  info.rs  mod.rs  publish.rs
scripts/jira/: get_issue_summary.sh  publish_time_tracking_dc.sh
