[workspace]
resolver = "3"
members = [
    "crates/nirvana",
    "crates/nirvana-core",
    "crates/nirvana-gui/src-tauri",
]

[workspace.package]
version = "0.3.0-alpha"
edition = "2024"
license = "GPL-3.0"

[profile.dev]
incremental = true

[profile.release]
opt-level = "s"
strip = true
lto = true
codegen-units = 1
