[package]
name = "nirvana-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono = "0.4.44"
directories = "6.0.0"
reqwest = {
    version = "0.13.3",
    default-features = false,
    features = ["blocking", "json", "rustls"]
}
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.18"
toml = "1.1.2"
