[package]
name = "nirvana-gui"
version.workspace = true
edition = "2021"
description = "Nirvana desktop GUI"
authors = ["you"]

[lib]
name = "nirvana_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
incremental = true
